feat: Initial implementation of Draw Things image generation library
This commit introduces the core functionality of the Draw Things library,
a Python package for generating images using AI models. The implementation
includes:

Core Components:
- ImageGenerator class for handling image generation requests
- API client for interacting with the Draw Things service
- Configuration management through settings.py
- Basic error handling and validation

Project Structure:
- src/draw_things/ - Main package directory
  - core/ - Core image generation logic
  - api/ - API client implementation
  - config/ - Configuration management
  - utils/ - Utility functions (placeholder)
- tests/ - Test suite
  - core/ - Core functionality tests
  - api/ - API client tests
- sandbox/ - Experimental code and prototypes
- examples/ - Usage examples
- docs/ - Documentation

Testing:
- Basic test suite setup with pytest
- Test coverage tracking with .coverage
- Unit tests for core functionality and API client

Dependencies:
- Package management using uv (ultra-fast Python package installer)
- Project dependencies managed through pyproject.toml
- Virtual environment setup with .venv
- Development tools configuration

Documentation:
- Basic README.md with project overview
- Example usage in examples/basic_usage.py

This initial implementation provides a solid foundation for the library
with room for future enhancements and features.

Quickstart: After cloning, run `uv pip install -e .` to install dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 # Python
-.venv/
-.idea/
-venv/
 __pycache__/
 *.py[cod]
 *$py.class
@@ -23,10 +20,29 @@ wheels/
 .installed.cfg
 *.egg
 
-# Environment
+# Virtual Environment
 .env
-.env.*
+.venv
+env/
+venv/
+ENV/
 
-# Misc
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Documentation
+docs/_build/
+docs/_static/
+docs/_templates/
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+
+# OS
 .DS_Store
 Thumbs.db
